--- a/Python/divar/templates/home-index/index.html
+++ b/Python/divar/templates/home-index/index.html
@@ -65,7 +65,7 @@
             <!-- form search in navbar -->
             <form action="" class="form-inline w-25 bg-light-owen-lighter rounded">
               <div class="input-group">
-                <input dir="rtl" class="border-0 form-control p-0 bg-light-owen-lighter" type="text"
+                <input dir="rtl" class="border-0 form-control p-0 bg-light-owen-lighter border-bottom" type="text"
                   placeholder="جستجو در آگهی ها">
                 <button class="border-0 input-group-text btn bg-light-owen-lighter">
                   <i class=" bi bi-search" id=""></i>
@@ -99,16 +99,18 @@
                   </a>
                   {% endif %}
 
-                  <a href="{{url_for('login')}}"
+                {% if not (user_status.login == True) %}
+                    <a href="{{url_for('login')}}"
                     class="dropdown-item px-5 text-black-muted-cs border-bottom py-3 transition-bgcolor-1s">
                     <span> ورود </span>
                     <i class="bi bi-box-arrow-right"></i>
-                  </a>
-                                    
-                  <a href="{{url_for('register')}}" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom transition-bgcolor-1s ">
-                    <span>ساخت حساب کاربری</span>
-                    <i class="bi bi-person-plus fs-8"></i>
-                  </a>
+                    </a>
+                {% endif %}
+                    
+                    <a href="{{url_for('register')}}" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom transition-bgcolor-1s ">
+                      <span>ساخت حساب کاربری</span>
+                      <i class="bi bi-person-plus fs-8"></i>
+                    </a>
 
                   {% if user_status.login == True %}
                     <a href="" class="dropdown-item px-5 text-black-muted-cs border-bottom py-3 transition-bgcolor-1s ">
