--- a/Python/divar/templates/user/user-base.html
+++ b/Python/divar/templates/user/user-base.html
@@ -16,7 +16,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %} {% endblock %}</title>
+    <title>
+      {% block title %} 
+      {% endblock %}
+    </title>
     <!-- icon -->
     <link
       rel="stylesheet"
@@ -56,7 +59,7 @@
     {% block navbar %}
     {% endblock %}
 
-    <div class="container">
+    <div class="container-fluid">
       {% block body %}
       {% endblock %}
     </div>
