--- a/Python/divar/templates/register-posts/index.html
+++ b/Python/divar/templates/register-posts/index.html
@@ -2,7 +2,8 @@
 
 {% block body %}
 
-<div>
+<div class="mt-3">
+
         {% with messages = get_flashed_messages(True) %}
             {% if messages %}
                 {% for category,message in messages %}
@@ -22,6 +23,7 @@
     <div class="header-register-post text-center mt-2">
         <h4>ثبت آگهی</h4>        
     </div>
+    
     <form action="{{url_for('register_post')}}" method="post" enctype="multipart/form-data">
     {{form.csrf_token() }}
     <div class="category-register-post border rounded text-center p-2 my-5">
@@ -103,13 +105,15 @@
     </div>
 
 
-    <div class="select-city my-3">
+    <div class="select-city my-5">
         <h5 class="text-muted">شهر</h5>
         <select name="city" id="city_published" class="form-control">
-            <option value="کرج">کرج</option>
-            <option value="کرج">کرج</option>
-            <option value="کرج">کرج</option>
-            <option value="کرج">کرج</option>
+                <option disabled selected value="none">شهر خود را انتخاب کنید</option>
+                {% if cities %}
+                    {% for city in cities %}    
+                        <option value="{{city}}"> {{city}} </option>
+                    {% endfor %}
+                {% endif %}
         </select>
     </div>
     
@@ -139,7 +143,7 @@
 
     <div class="infotmation my-5 pt-4">
         <h5 class="">اطلاعات حساب کاربری</h5>
-        <p class="text-muted fs-8">حساب شما در دیوار با شمارهٔ ۰۹۳۳۱۰۱۶۸۷۹ فعال است. تماس و چت نیز با این شماره انجام می‌شود.</p>
+        <p class="text-muted fs-8">حساب شما در دیوار با ایمیل {{session.get("email", "none")}} فعال است  تماس و چت نیز با این شماره انجام می‌شود.</p>
         <p class="text-muted fs-8">توجه: لطفاً پس از ثبت آگهی، به پیامک‌های پرداخت وجه بی‌اعتنا باشید.</p>
     </div>
 
