--- a/Python/divar/templates/register-posts/error_auth.html
+++ b/Python/divar/templates/register-posts/error_auth.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 
-
+        <input type="hidden" name="csrf_token" id="csrf_token" value="{{csrf_token()}}">
 
         <div id="" style="margin-top: 15rem;">
             <div class="modal-dialog modal-dialog-centered" class="shadow" >
