--- a/Python/divar/templates/register-posts/index.html
+++ b/Python/divar/templates/register-posts/index.html
@@ -25,7 +25,7 @@
     </div>
     
     <form action="{{url_for('register_post')}}" method="post" enctype="multipart/form-data">
-    {{form.csrf_token() }}
+    {{ form.csrf_token() }}
     <div class="category-register-post border rounded text-center p-2 my-5">
         <h6 class="text-muted">دسته بندی آگهی خود را انتخاب کنید</h6>  
         <div class="form-group">
@@ -111,7 +111,7 @@
                 <option disabled selected value="none">شهر خود را انتخاب کنید</option>
                 {% if cities %}
                     {% for city in cities %}    
-                        <option value="{{city}}"> {{city}} </option>
+                        <option class="text-muted" value="{{city}}"> {{city}} </option>
                     {% endfor %}
                 {% endif %}
         </select>
