--- a/Python/divar/templates/user/index.html
+++ b/Python/divar/templates/user/index.html
@@ -240,8 +240,7 @@
             >
               لغو آپلود
             </button>
-            {{form.submit(id="upload-btn",class="btn btn-primary",value="آپلود
-            فایل ")}}
+            {{form.submit(id="upload-btn",class="btn btn-primary",value="آپلود فایل ")}}
           </div>
         </form>
       </div>
