add modal terms :) #fix_tage_categories
still internet is filter #mahsa_amini :(   

add modal to post page and path images filter added and fixed the tag category in post page

--- a/Python/divar/templates/home-index/index.html
+++ b/Python/divar/templates/home-index/index.html
@@ -238,7 +238,7 @@
                   <div>
                     <span class="text-muted fs-11  costumer-info-caption">در حد نو</span>
                     <br>
-                  {% if post.post_price == "on" %}
+                  {% if post.post_price == "True" %}
                       <span class="text-muted fs-11  costumer-info-caption">توافقی</span>
                   {% else %}
                       <span class="text-muted fs-11  costumer-info-caption">{{post.post_price}}</span>
